May 8, 2024
Adding variant annotations for gwas

February 5, 2024
updating insert to an insertBatch

January 10, 2024
finishing qtl annot side

November 28, 2023
started the GWAS Annotation pipeline