@@ -159,17 +159,31 @@ public class Manager {
             for (String eId : efoIds) {
                 Term t = new Term();
                 String efoId = eId.replace("_", ":");
-                if (!efoId.startsWith("EFO"))
+                if (!efoId.startsWith("EFO") && !efoId.startsWith("MONDO") && !efoId.startsWith("GO") && !efoId.startsWith("HP"))
                     efoId = "EFO:" + efoId;
                 t = dao.getTermByAccId(efoId);
-                if (t == null) { // figure why it is null
-                    continue;
+                if (t == null && !efoId.startsWith("MONDO")) { // figure why it is null
+                    status.info("\tOnt Term not found: "+efoId);
+                    efoId = "EFO:" + efoId;
+                    t = dao.getTermByAccId(efoId);
+                    if (t==null)
+                        continue;
                 }
-
+                String notes = "";
+                if (efoId.startsWith("EFO"))
+                    notes = "Based on the EFO term ID";
+                else if (efoId.startsWith("MONDO"))
+                    notes = "Based on the MONDO term ID from GWAS";
+                else if (efoId.startsWith("GO"))
+                    notes = "Based on the GO term ID from GWAS";
+                else if (efoId.startsWith("HP"))
+                    notes = "Based on the HP term ID from GWAS";
+                else
+                    notes = "Based on the EFO term ID";
                 qtlToTerm.computeIfAbsent(gwasQtl.getSymbol(), k -> new ArrayList<>());
                 List<String> terms = qtlToTerm.get(gwasQtl.getSymbol());
 
-                if (!checkAnnotationExist(gwasQtl.getRgdId(), efoId) && !terms.contains(t.getAccId())) // does not exist
+                if (t != null && !checkAnnotationExist(gwasQtl.getRgdId(), t) && !terms.contains(t.getAccId())) // does not exist
                 {
                     Annotation a = new Annotation();
                     a.setCreatedBy(getCreatedBy());
@@ -193,9 +207,7 @@ public class Manager {
                     terms.add(t.getAccId());
                 }
 
-                // get TermSynonym by EFO acc
-
-                List<TermSynonym> synonyms = dao.getTermSynonymsBySynonymName(t.getAccId());
+                List<TermSynonym> synonyms = dao.getTermSynonymsBySynonymName(efoId);
                 if (synonyms != null && !synonyms.isEmpty()) {
                     // loop through and check if they match above Aspects
                     for (TermSynonym ts : synonyms) {
@@ -206,14 +218,16 @@ public class Manager {
                             annot.setAspect("D");
                         } else if (ts.getTermAcc().startsWith("VT")) {
                             annot.setAspect("V");
-                        } else if(ts.getTermAcc().startsWith("HP")){
+                        } else if (ts.getTermAcc().startsWith("HP")) {
                             annot.setAspect("H");
                         } else
                             continue;
                         Term term = dao.getTermByAccId(ts.getTermAcc());
                         if (term == null)
                             continue;
-                        if (!checkAnnotationExist(gwasQtl.getRgdId(), term.getAccId()) && !terms.contains(term.getAccId())) {
+                        if (term.isObsolete())
+                            continue;
+                        if (!checkAnnotationExistWithEFO(gwasQtl.getRgdId(), term, t) && !terms.contains(term.getAccId())) {
                             annot.setCreatedBy(getCreatedBy());
                             annot.setLastModifiedBy(getCreatedBy());
                             annot.setAnnotatedObjectRgdId(gwasQtl.getRgdId());
@@ -230,11 +244,13 @@ public class Manager {
                             annot.setEvidence("IAGP");
                             annot.setRgdObjectKey(6);
                             annot.setXrefSource(gc.getPmid());
+                            annot.setNotes(notes);
                             allAnnots.add(annot);
                             terms.add(term.getAccId());
                         }
                     } // end synonym for
                 }
+
                 qtlToTerm.put(gwasQtl.getSymbol(), terms);
             }
             if (!qtlRgdIds.contains(gwasQtl.getRgdId()) && !checkRefAssocExist(gwasQtl.getRgdId())){
@@ -314,17 +330,32 @@ public class Manager {
             for (String eid : efoIds) {
                 Term t = new Term();
                 String efoId =  eid.replace("_", ":");
-                if (!efoId.startsWith("EFO"))
+                if (!efoId.startsWith("EFO") && !efoId.startsWith("MONDO") && !efoId.startsWith("GO") && !efoId.startsWith("HP"))
                     efoId = "EFO:" + efoId;
                 t = dao.getTermByAccId(efoId);
                 if (t == null) { // figure why it is null
-                    continue;
+                    status.info("\tOnt Term not found: "+efoId);
+                    efoId = "EFO:" + efoId;
+                    t = dao.getTermByAccId(efoId);
+                    if (t==null)
+                        continue;
                 }
+                String notes = "";
+                if (t.getAccId().startsWith("EFO"))
+                    notes = "Based on the EFO term ID";
+                else if (t.getAccId().startsWith("MONDO"))
+                    notes = "Based on the MONDO term ID from GWAS";
+                else if (t.getAccId().startsWith("GO"))
+                    notes = "Based on the GO term ID from GWAS";
+                else if (t.getAccId().startsWith("HP"))
+                    notes = "Based on the HP term ID from GWAS";
+                else
+                    notes = "Based on the EFO term ID";
 
                 varToTerm.computeIfAbsent(vmd.getId(), k -> new ArrayList<>());
                 List<String> terms = varToTerm.get(vmd.getId());
 
-                if (!checkAnnotationExist(rgdId, t.getAccId()) && !terms.contains(t.getAccId())) {
+                if (!checkAnnotationExist(rgdId, t) && !terms.contains(t.getAccId())) {
                     Annotation a = new Annotation();
                     a.setCreatedBy(getCreatedBy());
                     a.setLastModifiedBy(getCreatedBy());
@@ -365,8 +396,9 @@ public class Manager {
                         Term term = dao.getTermByAccId(ts.getTermAcc());
                         if (term == null)
                             continue;
-
-                        if (!checkAnnotationExist(rgdId, term.getAccId()) && !terms.contains(term.getAccId())) {
+                        if (term.isObsolete())
+                            continue;
+                        if (!checkAnnotationExistWithEFO(rgdId, term, t) && !terms.contains(term.getAccId())) {
                             annot.setCreatedBy(getCreatedBy());
                             annot.setLastModifiedBy(getCreatedBy());
                             annot.setAnnotatedObjectRgdId(rgdId);
@@ -383,6 +415,7 @@ public class Manager {
                             annot.setEvidence("IAGP");
                             annot.setRgdObjectKey(7);
                             annot.setXrefSource(gc.getPmid());
+                            annot.setNotes(notes);
                             allAnnots.add(annot);
                             terms.add(term.getAccId());
                         }
@@ -448,9 +481,35 @@ public class Manager {
         }
     }
 
-    boolean checkAnnotationExist(int annotRgdId, String accId) throws Exception{
-        List<Annotation> annots = dao.getAnnotations(annotRgdId, accId, getCreatedBy());
+    boolean checkAnnotationExist(int annotRgdId, Term term) throws Exception{
+        List<Annotation> annots = dao.getAnnotations(annotRgdId, term.getAccId(), getCreatedBy());
+        if (term.isObsolete()){
+            dao.deleteAnnotations(annots);
+            return term.isObsolete();
+        }
+        if (!annots.isEmpty()){
+            // update last modified data
+            dao.updateLastModifiedAnnots(annots);
+        }
         return !annots.isEmpty(); // if none, false
+    }
+
+    boolean checkAnnotationExistWithEFO(int annotRgdId, Term term, Term efo) throws Exception{
+        List<Annotation> annots = dao.getAnnotations(annotRgdId, term.getAccId(), getCreatedBy());
+        if (term.isObsolete()){
+            dao.deleteAnnotations(annots);
+            return term.isObsolete();
+        }
+        if (efo != null && efo.isObsolete() && !annots.isEmpty()){
+            for (Annotation a : annots) {
+                status.info("Annotation Based on Obsolete EFO:\n" + a.dump("|"));
+            }
+        }
+        if (!annots.isEmpty()){
+            dao.updateLastModifiedAnnots(annots);
+            return true;
+        }
+        return false; // if none, false
     }
 
     XdbId createXdb(GWASCatalog g, QTL gwasQtl) throws Exception{
